--- a/css/index.css
+++ b/css/index.css
@@ -240,25 +240,28 @@ footer nav a {
   padding-top: 2%;
 }
 a:hover {
-  color: black;
-  animation-fill-mode: backwards;
+  color: red;
+  .btn {
+    background-color: #ddd;
+    border: none;
+    color: black;
+    padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition: 0.3s;
+  }
+
+  .btn:hover {
+    background-color: #3e8e41;
+    color: white;
+  }
 }
 .section-1 {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   padding-top: 2%;
-}
-.container section-1 a:hover {
-  animation: pulse 5s infinite;
-  @keyframes pulse {
-    0% {
-      background-color: white;
-    }
-    100% {
-      background-color: brown;
-    }
-  }
 }
 .road-img {
   width: 100%;
@@ -331,7 +334,7 @@ a:hover {
   height: 100px;
   background: darkorchid;
   margin: 20px 2.5%;
-  color: white;
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
