--- a/css/index.css
+++ b/css/index.css
@@ -239,23 +239,11 @@ footer nav a {
   width: 100%;
   padding-top: 2%;
 }
+a {
+  color: black;
+}
 a:hover {
   color: red;
-  .btn {
-    background-color: #ddd;
-    border: none;
-    color: black;
-    padding: 16px 32px;
-    text-align: center;
-    font-size: 16px;
-    margin: 4px 2px;
-    transition: 0.3s;
-  }
-
-  .btn:hover {
-    background-color: #3e8e41;
-    color: white;
-  }
 }
 .section-1 {
   display: flex;
@@ -374,4 +362,13 @@ a:hover {
   justify-content: space-evenly;
   align-items: center;
   padding-top: 2%;
+}
+
+.top-about {
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  border-bottom: 1px dashed black;
+  padding: 2%;
 }
