--- a/css/index.css
+++ b/css/index.css
@@ -380,3 +380,12 @@ a:hover {
   display: flex;
   justify-content: space-evenly;
 }
+.first-group {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
+  border-bottom: 1px dashed black;
+  width: 50%;
+  flex-wrap: wrap;
+}
