--- a/css/index.css
+++ b/css/index.css
@@ -357,12 +357,6 @@ a:hover {
   align-items: center;
   justify-content: center;
 }
-.section-01 {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-  padding-top: 2%;
-}
 
 .top-about {
   display: flex;
@@ -374,11 +368,15 @@ a:hover {
 }
 .strategy {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: start;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .HWW {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: start;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 .first-group {
   display: flex;
@@ -386,6 +384,48 @@ a:hover {
   justify-content: space-evenly;
   margin-bottom: 20px;
   border-bottom: 1px dashed black;
-  width: 50%;
+  align-items: center;
+}
+.first-group .strategy {
+  width: 48%;
+  padding: 0 1%;
+  padding-bottom: 20px;
+}
+.first-group .HWW {
+  width: 48%;
+  padding: 0 1%;
+  padding-bottom: 20px;
+}
+button {
+  border-radius: 8px;
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+  padding: 14px 40px;
+  font-size: 16px;
+}
+.second-group {
+  display: flex;
   flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
+  border-bottom: 1px dashed black;
+  align-items: center;
+}
+.second-group .PWW {
+  width: 48%;
+  padding: 0 1%;
+  padding-bottom: 20px;
+}
+.second-group .Collaboration {
+  width: 48%;
+  padding: 0 1%;
+  padding-bottom: 20px;
+}
+.LWT {
+  display: flex;
+  justify-content: start;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+  padding: 2%;
 }
