finished the project with all animations in place

--- a/css/index.css
+++ b/css/index.css
@@ -399,11 +399,21 @@ a:hover {
 button {
   border-radius: 8px;
   background-color: white;
-  color: black;
   border: 2px solid black;
   padding: 14px 40px;
   font-size: 16px;
+  animation-name: example;
+  animation-duration: 7s;
 }
+@keyframes example {
+  from {
+    background-color: white;
+  }
+  to {
+    background-color: cornflowerblue;
+  }
+}
+
 .second-group {
   display: flex;
   flex-wrap: wrap;
